--- a/_config.yml
+++ b/_config.yml
@@ -19,10 +19,10 @@ sidebar-avatar: /img/post-bg-icon.jpg      # use absolute URL, seeing it's used 
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     qiubaiying
+#zhihu_username:     qiubaiying
 github_username:    optimus2014
 #facebook_username:  baiying.qiu.7
-jianshu_username:   e71990ada2fd
+#jianshu_username:   e71990ada2fd
 #twitter_username:   qiubaiying
 
 
