--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -3,13 +3,13 @@
   "short_name": "闫儒 Blog",
   "description": "A personal blog by engineer",
   "icons": [{
-    "src": "icons/pwa_icon_128.png",
+    "src": "icons/pwa_icon_128.jpg",
     "sizes": "128x128",
-    "type": "image/png"
+    "type": "image/jpg"
   }, {
-    "src": "icons/pwa_icon_512.png",
+    "src": "icons/pwa_icon_512.jpg",
     "sizes": "512x512",
-    "type": "image/png"
+    "type": "image/jpg"
   }],
   "background_color": "#fff",
   "theme_color": "#000",
