删除友情链接

--- a/_config.yml
+++ b/_config.yml
@@ -97,15 +97,15 @@ service-worker: true
 
 
 # Friends
-friends: [
-    {
-        title: "FR1",
+#friends: [
+#    {
+ #       title: "FR1",
        # href: "http://zhengwuyang.com"
-    },{
-        title: "FR2",
+#    },{
+ #       title: "FR2",
       #  href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "FR3",
+#    },{
+ #       title: "FR3",
        # href: "https://apple.com"
-    }
-]
+ #   }
+#]
