--- a/_config.yml
+++ b/_config.yml
@@ -97,15 +97,12 @@ service-worker: true
 
 
 # Friends
-#friends: [
-#    {
- #       title: "FR1",
-       # href: "http://zhengwuyang.com"
-#    },{
- #       title: "FR2",
-      #  href: "http://www.jianshu.com/u/e71990ada2fd"
-#    },{
- #       title: "FR3",
-       # href: "https://apple.com"
- #   }
-#]
+friends: [
+    {
+        title: "LOFTER",
+        href: "http://www.lofter.com/blog/optimus2014"
+    },{
+        title: "500PX",
+        href: "https://500px.com/foreveryjr"
+    }
+]
